Fix profile image becoming huge on smaller screens

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -6,8 +6,8 @@
   }
 
   img.profile {
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
   }
 }
 
